Feat/s1 sb12 implementing admin page
