# docs/swagger.json
@@ -48,6 +48,9 @@
             },
             "post": {
                 "description": "Add a user to database",
+                "consumes": [
+                    "application/json"
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -55,6 +58,37 @@
                     "admin"
                 ],
                 "summary": "Add User",
+                "parameters": [
+                    {
+                        "description": "Admin Add User Payload",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/admin.AdminAddUserPayload"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/web.BaseResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/admin/user/{email}": {
+            "get": {
+                "description": "Get a user from database",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "admin"
+                ],
+                "summary": "Get User By Email",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -66,6 +100,9 @@
             },
             "delete": {
                 "description": "Delete a user from database",
+                "consumes": [
+                    "application/json"
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -84,6 +121,9 @@
             },
             "patch": {
                 "description": "Update a user from database",
+                "consumes": [
+                    "application/json"
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -91,26 +131,17 @@
                     "admin"
                 ],
                 "summary": "Update User By Id",
-                "responses": {
-                    "200": {
-                        "description": "OK",
+                "parameters": [
+                    {
+                        "description": "Admin Update User Payload",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
                         "schema": {
-                            "$ref": "#/definitions/web.BaseResponse"
+                            "$ref": "#/definitions/admin.AdminUpdateUserPayload"
                         }
                     }
-                }
-            }
-        },
-        "/admin/user/{id}": {
-            "get": {
-                "description": "Get a user from database",
-                "produces": [
-                    "application/json"
                 ],
-                "tags": [
-                    "admin"
-                ],
-                "summary": "Get User By Email",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -420,6 +451,56 @@
         }
     },
     "definitions": {
+        "admin.AdminAddUserPayload": {
+            "type": "object",
+            "required": [
+                "email",
+                "name",
+                "role"
+            ],
+            "properties": {
+                "email": {
+                    "description": "User Email",
+                    "type": "string",
+                    "example": "someone@example.com"
+                },
+                "name": {
+                    "description": "User name",
+                    "type": "string",
+                    "example": "someone"
+                },
+                "role": {
+                    "description": "User Role",
+                    "type": "string",
+                    "example": "admin"
+                }
+            }
+        },
+        "admin.AdminUpdateUserPayload": {
+            "type": "object",
+            "required": [
+                "email",
+                "name",
+                "role"
+            ],
+            "properties": {
+                "email": {
+                    "description": "User Email",
+                    "type": "string",
+                    "example": "someone@example.com"
+                },
+                "name": {
+                    "description": "User name",
+                    "type": "string",
+                    "example": "someone"
+                },
+                "role": {
+                    "description": "User Role",
+                    "type": "string",
+                    "example": "admin"
+                }
+            }
+        },
         "confirm.ConfirmRequestPayload": {
             "description": "Information that should be available when you confirm a password reset",
             "type": "object",
